# SE1-ParametricParticles

./: README.md
.github/workflows/: cibuild.yml
Resources/: ParametricParticles.gro  ParametricParticlesExamples.gro
Sources/: CMakeLists.txt  ParametricParticles.sln
Sources/Ecc/: Ecc.vcxproj
Sources/ParametricParticlesMP/: AutoHeightMap.es  ParametricParticles.es  ParametricParticlesMP.vcxproj  ParametricParticlesMP.vcxproj.filters  ParticleRotation.es  ParticleVelocity.es  Particles.cpp  Particles.h  SpawnShapeBase.es  SpawnShapeBox.es  SpawnShapeCylinder.es  SpawnShapeSphere.es  WeakPointer.cpp
Sources/ParametricParticlesMP/StdH/: StdH.h
